--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name=BelatrixLogs
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+spring.jpa.hibernate.ddl-auto=update
+logs.config.path=D:\\temp\\log\\logFile.txt
+logs.config.logMessage=true
+logs.config.logWarning=true
+logs.config.logError=true
+logs.config.logToFile=true
+logs.config.logToConsole=true
+logs.config.logToDatabase=true
 
