Se implementa funcionalidad de ILogServices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.platform=h2
 spring.jpa.hibernate.ddl-auto=update
-logs.config.path=D:\\temp\\log\\logFile.txt
+logs.config.path=D:\\temp\\log\\
+logs.config.filename=MyLog.txt
 logs.config.logMessage=true
 logs.config.logWarning=true
 logs.config.logError=true
